[package]
name = "twounordered"
version = "0.1.0"
authors = ["Ken <kenakioreed@gmail.com>"]
edition = "2018"
readme = "readme.md"
license = "MIT"
keywords = ["vec", "retain","double","doublevec"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
