[package]
name = "twounordered"
version = "0.3.0"
authors = ["Ken <kenakioreed@gmail.com>"]
edition = "2018"
description = "Provides two vec-like vecs backed by a single vec and provides retain_mut_unordered()"
readme = "README.md"
license = "MIT"
keywords = ["vec", "retain","double","doublevec"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
