[package]
name = "twounordered"
version = "0.7.1"
authors = ["Ken <kenakioreed@gmail.com>"]
edition = "2018"
repository = "https://github.com/tiby312/twounordered"
description = "Provides two vec-like vecs backed by a single vec and provides retain_mut_unordered()"
readme = "README.md"
license = "MIT"
keywords = ["vec", "retain","double","doublevec"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
